@@ -34,7 +34,7 @@ else
 fi
 
 DIR=$(dirname $0)
-. $DIR/set-path.sh
+. $DIR/add-build-dirs-to-paths.sh
 
 case "$OS" in
    cygwin*)
